# cosy-addr-server

./: 00Liesmich  Makefile.am  README.md  addr2name.c  addr_serv.default  addr_serv.in  config.h.in  configure.ac  get_clock_port  get_display  get_host  get_process  get_reg_host.c  get_reg_port  get_reg_port.old  get_server_port  get_sw_tx_host.c  get_sw_ustate_port  get_title  get_ustate_host.c  get_ustate_port  get_workspace  mapper.c  read_tab.c  server.c  server.h  sgetline.c  tpopen.c
default/: addr_serv.in
